# query2cmp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: simple_mcp_server.py
query2cmp/: __init__.py  cli.py  config.py  mcp_client.py  pipeline.py
query2cmp/llm_backends/: __init__.py  apple_backend.py  base.py  openai_backend.py
